# hire-me

./: .gitignore  CMakeLists.txt  frame.html  index.html
.github/workflows/: build-and-deploy.yml  c-cpp.yml  static.yml
CustomVisageCmake/: CMakeLists.txt
src/: MyScrollableContent.h  NeuralNetVisage.h  animated_frame.h  button.h  example.cpp  example.h  main.cpp  simple_frame.h  spline.h
